fix: force margin removal to prevent ro override margin-left on small screens

--- a/intra/styles/responsive.css
+++ b/intra/styles/responsive.css
@@ -153,7 +153,7 @@ html
   align-items: center;
   display: flex;
   justify-content: center;
-  margin: 0;
+  margin: 0 !important;
   white-space: nowrap;
 }
 
